--- a/style.css
+++ b/style.css
@@ -16,6 +16,23 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 4.5em;
     color: darkgreen;
+}
+
+h1 {
+    font-size: 4.5em;
+}
+
+@media (max-width: 1025px) and (min-width: 800px) {
+    h1 {
+        font-size: 3.5em;
+        padding: 1em;
+    }
+}
+
+@media (max-width: 800px) {
+    h1 {
+        font-size: 2.5em;
+        padding: 1em;
+    }
 }
